tests/success/declVarDentrodeMetodo.tds
integer x;
void metodo1(){
    bool esMenor;
    integer menor,mayor;
    esMenor = !(menor == mayor);
    return;
}

void main(){
    return;
}