tests/fail/test_type_error_03.tds
integer main(){
    bool y;
    y = true && y;
    return y;
}